--- a/Personal_Portfolio_page/Personal_Portfolio_page.html
+++ b/Personal_Portfolio_page/Personal_Portfolio_page.html
@@ -16,27 +16,50 @@
     </header>
     <section id="welcome-section">
         <h1>Welcome to My Portfolio</h1>
-        <p>I'm [Your Name], a passionate developer.</p>
+        <p>I'm Aviwe, a passionate developer.</p>
     </section>
     <section id="projects">
         <h2>My Projects</h2>
-        <div class="project-tile">
-            <a href="https://github.com/your-github/project1" target="_blank">
+        <div class="survery_form">
+            <a href="https://github.com/Aviwesonamzi/project1" target="_blank">
                 <img src="https://via.placeholder.com/150" alt="Project 1">
                 <p>Project 1</p>
             </a>
         </div>
-        <div class="project-tile">
-            <a href="https://github.com/your-github/project2" target="_blank">
+        <div class="Product_landline_page">
+            <a href="https://github.com/Aviwesonamzi/project2" target="_blank">
                 <img src="https://via.placeholder.com/150" alt="Project 2">
                 <p>Project 2</p>
             </a>
         </div>
-        <!-- Add more project tiles as needed -->
+        <div class="Technical_Documentation_page">
+            <a href="https://github.com/Aviwesonamzi/project3" target="_blank">
+                <img src="https://via.placeholder.com/150" alt="Project 3">
+                <p>Project 3</p>
+            </a>
+        </div>
+	<div class="Tribute_page">
+            <a href="https://github.com/Aviwesonamzi/project4" target="_blank">
+                <img src="https://via.placeholder.com/150" alt="Project 4">
+                <p>Project 4</p>
+            </a>
+        </div>
+	<div class="Voice_assistant">
+            <a href="https://github.com/Aviwesonamzi/project5" target="_blank">
+                <img src="https://via.placeholder.com/150" alt="Project 5">
+                <p>Project 5</p>
+            </a>
+        </div>
+	<div class="Chat_Application">
+            <a href="https://github.com/Aviwesonamzi/project6" target="_blank">
+                <img src="https://via.placeholder.com/150" alt="Project 6">
+                <p>Project 6</p>
+            </a>
+        </div>
     </section>
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out to me on <a id="profile-link" href="https://github.com/your-github" target="_blank">GitHub</a>.</p>
+        <p>Feel free to reach out to me on <a id="profile-link" href="https://github.com/Aviwesonamzi" target="_blank">GitHub</a>.</p>
     </section>
 </body>
 </html>
